# ext-dns

./: INSTALL  LATEST-VERSION  Makefile.am  NEWS  README  TODO  VERSION  autogen.sh  buildrpm.sh  configure.ac  ext-dns.pc.in  gen-os-header.py
debian-files/bionic/: README.Ubuntu
debian-files/bullseye/: README.Debian  control
debian-files/buster/: README.Debian
debian-files/focal/: README.Ubuntu  ext-dnsd.postinst
debian-files/jammy/: README.Ubuntu  copyright
debian-files/jessie/: README.Debian  copyright
debian-files/lenny/: control  ext-dns-query.install  ext-dnsd.install  ext-dnsd.postinst
debian-files/precise/: changelog  ext-dns-doc.install  ext-dnsd.install
debian-files/squeeze/: control  ext-dnsd.install  libext-dns.install  rules
debian-files/stretch/: README.Debian  changelog  control  ext-dns-query.install  libext-dns-dev.install
debian-files/wheezy/: control  ext-dnsd.install
debian-files/xenial/: README.Ubuntu
doc/: Makefile.am  ext-dns-footer.html  ext-dns-header.html  ext-dns.doxygen.in  ext-dnsd-init.d  ext-dnsd-rpm-init.d  powerdns-regression-tests.txt  where-to-add-records.txt
doc/release-notes/: ext-dns-0.2.1.txt  ext-dns-0.3.1.txt  ext-dns-0.4.1.txt  ext-dns-0.4.2.txt  release-rutine.txt
query/: Makefile.am  ext-dns-query.c
rpm/SPECS/: changelog.inc  ext-dns.spec
server/: Makefile.am  child-resolver-skel.py  exarg.c  ext-dns-watcher.py  ext-dns.example.conf  ext-dnsd-watcher  ext-dnsd.h  main.c
src/: Makefile.am  ext-dns-cache.c  ext-dns-cache.h  ext-dns-ctx.c  ext-dns-ctx.h  ext-dns-errno.c  ext-dns-errno.h  ext-dns-handlers.h  ext-dns-io.c  ext-dns-io.h  ext-dns-message.c  ext-dns-message.h  ext-dns-private-defs.h  ext-dns-private.h  ext-dns-reader.c  ext-dns-reader.h  ext-dns-session.c  ext-dns-session.h  ext-dns-support.c  ext-dns-support.h  ext-dns-thread-pool.c  ext-dns-thread-pool.h  ext-dns-thread.c  ext-dns-thread.h  ext-dns-types.h  ext-dns.c  ext-dns.h  libext-dns.def
test/: Makefile.am  ext-dns-regression-client.c  ext-dns-regression-listener.c  ext-dns-simple-listener.c  hosts
web/: commercial.html  downloads.html  ext-dns.css  ext-dns.html  index.html  licensing.html  news.html  support.html  update-web.sh
